<resources>
    <string name="app_name">Pileapp</string>

    <string name="search">Search</string>
    <string name="lifespan">Lifespan</string>
    <string name="growth_rate">Growth rate</string>
    <string name="growth_period">Growth period</string>
    <string name="toxicity">Toxicity</string>
    <string name="leaf_retention">Leaf retention</string>
    <string name="bloom_period">Bloom period</string>
    <string name="propagation">Propagation</string>
    <string name="by">by %s</string>
    <string name="unknown">Unknown</string>

    <string name="add_plant">Add plant</string>
    <string name="remove_plant">Remove plant from grove</string>
    <string name="plant_image">Plant image</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
</resources>
