<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="viewModel"
                type="com.kapouter.pileapp.viewmodels.PlantDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/imagePager"
                android:layout_width="0dp"
                android:layout_height="220dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/name"/>

        <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.plant.name ?? viewModel.plant.scientificName}"
                style="@style/Title"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/imagePager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/scientificName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.plant.scientificName}"
                style="@style/Subtitle"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lifespan"/>

        <TextView
                android:id="@+id/lifespan"
                android:layout_height="0dp"
                android:layout_width="wrap_content"
                style="@style/Subtitle"
                android:text="@string/lifespan"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/scientificName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/growthRate"/>

        <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/barrier"
                app:barrierDirection="end"
                app:constraint_referenced_ids="lifespan,growthRate,growthPeriod,bloomPeriod,toxicity"
                tools:layout_editor_absoluteX="106dp"/>

        <ImageView
                android:id="@+id/lifespan1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/leaf"
                android:contentDescription="@string/lifespan"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toStartOf="@id/lifespan2"
                app:layout_constraintBottom_toBottomOf="@id/lifespan"/>

        <ImageView
                android:id="@+id/lifespan2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/leaf"
                android:contentDescription="@string/lifespan"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/lifespan1"
                app:layout_constraintEnd_toStartOf="@id/lifespan3"
                app:layout_constraintBottom_toBottomOf="@id/lifespan1"
                />

        <ImageView
                android:id="@+id/lifespan3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/leaf"
                android:contentDescription="@string/lifespan"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/lifespan2"
                app:layout_constraintBottom_toBottomOf="@id/lifespan2"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/growthRate"
                android:text="@string/growth_rate"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lifespan"/>

        <ImageView
                android:id="@+id/growthRateImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/snail"
                app:growthRate="@{viewModel.plant.mainSpecies.specifications.growthRate}"
                android:contentDescription="@string/growth_rate"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintBottom_toBottomOf="@id/growthRate"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/growthPeriod"
                android:text="@string/growth_period"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/growthRate"/>

        <ImageView
                android:id="@+id/spring"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/flower"
                android:contentDescription="@string/spring"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toStartOf="@id/summer"
                app:layout_constraintBottom_toBottomOf="@id/growthPeriod"/>

        <ImageView
                android:id="@+id/summer"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/sun"
                android:contentDescription="@string/summer"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/spring"
                app:layout_constraintEnd_toStartOf="@id/fall"
                app:layout_constraintBottom_toBottomOf="@id/spring"/>

        <ImageView
                android:id="@+id/fall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/leaf"
                android:contentDescription="@string/fall"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/summer"
                app:layout_constraintBottom_toBottomOf="@id/summer"
                app:layout_constraintEnd_toStartOf="@id/winter"/>

        <ImageView
                android:id="@+id/winter"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/snowflake"
                android:contentDescription="@string/winter"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/fall"
                app:layout_constraintBottom_toBottomOf="@id/fall"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/bloomPeriod"
                android:text="@string/bloom_period"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/growthPeriod"/>

        <ImageView
                android:id="@+id/springb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/flower"
                android:contentDescription="@string/spring"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toStartOf="@id/summerb"
                app:layout_constraintBottom_toBottomOf="@id/bloomPeriod"/>

        <ImageView
                android:id="@+id/summerb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/sun"
                android:contentDescription="@string/summer"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/springb"
                app:layout_constraintEnd_toStartOf="@id/fallb"
                app:layout_constraintBottom_toBottomOf="@id/springb"/>

        <ImageView
                android:id="@+id/fallb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/leaf"
                android:contentDescription="@string/fall"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/summerb"
                app:layout_constraintBottom_toBottomOf="@id/summerb"
                app:layout_constraintEnd_toStartOf="@id/winterb"/>

        <ImageView
                android:id="@+id/winterb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/grey"
                android:src="@drawable/snowflake"
                android:contentDescription="@string/winter"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/fallb"
                app:layout_constraintBottom_toBottomOf="@id/fallb"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/toxicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toxicity"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bloomPeriod"/>

        <ImageView
                android:id="@+id/toxicityImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/pollution"
                app:toxicity="@{viewModel.plant.mainSpecies.specifications.toxicity}"
                android:contentDescription="@string/toxicity"
                android:tint="@color/grey"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintBottom_toBottomOf="@id/toxicity"/>

        <TextView
                android:id="@+id/leafRetention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaf_retention"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toxicity"/>

        <ImageView
                android:id="@+id/leafRetentionImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/leaf"
                android:contentDescription="@string/leaf_retention"
                android:tint="@color/grey"
                app:leafRetention="@{viewModel.plant.mainSpecies.specifications.leafRetention}"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintBottom_toBottomOf="@id/leafRetention"/>

        <TextView
                android:id="@+id/propagation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/propagation"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/leafRetention"/>

        <TextView
                android:id="@+id/propagationValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:propagationValue="@{viewModel.plant.mainSpecies.propagation}"
                style="@style/Subtitle"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/propagation"/>

        <Button
                android:id="@+id/remove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/remove_plant"
                android:textColor="@color/white"
                android:background="@color/red"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintTop_toBottomOf="@id/propagation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>